--- a/PIDev_java/nbproject/project.properties
+++ b/PIDev_java/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/PIDev_java.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.controlsfx-8.40.11.jar=..\\..\\..\\..\\Downloads\\controlsfx-8.40.11.jar
 file.reference.fontawesomefx-8.9.jar=../../../../Downloads/fontawesomefx-8.9.jar
 file.reference.itextpdf-5.4.2.jar=../../../../Downloads/itextpdf-5.4.2.jar
 includes=**
@@ -39,7 +40,8 @@ javac.classpath=\
     ${javafx.classpath.extension}:\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.fontawesomefx-8.9.jar}:\
-    ${file.reference.itextpdf-5.4.2.jar}
+    ${file.reference.itextpdf-5.4.2.jar}:\
+    ${file.reference.controlsfx-8.40.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
