--- a/PIDev_java/nbproject/project.properties
+++ b/PIDev_java/nbproject/project.properties
@@ -29,13 +29,19 @@ dist.jar=${dist.dir}/PIDev_java.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.fontawesomefx-8.9.jar=C:\\Users\\brahm\\Desktop\\3A27\\fontawesomefx-8.9.jar
+file.reference.fontawesomefx-glyphsbrowser-all-1.0.jar=C:\\Users\\brahm\\Desktop\\3A27\\fontawesomefx-glyphsbrowser-all-1.0.jar
+file.reference.itextpdf-5.4.2.jar=C:\\Users\\brahm\\Desktop\\3A27\\itextpdf-5.4.2.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.fontawesomefx-8.9.jar}:\
+    ${file.reference.fontawesomefx-glyphsbrowser-all-1.0.jar}:\
+    ${file.reference.itextpdf-5.4.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
