--- a/PIDev_java/nbproject/project.properties
+++ b/PIDev_java/nbproject/project.properties
@@ -29,13 +29,23 @@ dist.jar=${dist.dir}/PIDev_java.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.activation.jar=C:\\Users\\USER\\Downloads\\activation.jar
+file.reference.java-json-schema.jar=C:\\Users\\USER\\Downloads\\java-json-schema.jar
+file.reference.javax.mail.jar=C:\\wamp64\\www\\RUNTIME-TERROR-master\\Desktop\\javax.mail.jar
+file.reference.mail.jar=C:\\Users\\USER\\Downloads\\mail.jar
+file.reference.spring-security-crypto-4.1.0.RELEASE.jar=C:\\Users\\USER\\Downloads\\spring-security-crypto-4.1.0.RELEASE.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.java-json-schema.jar}:\
+    ${file.reference.mail.jar}:\
+    ${file.reference.activation.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.spring-security-crypto-4.1.0.RELEASE.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
