--- a/PIDev_java/nbproject/project.properties
+++ b/PIDev_java/nbproject/project.properties
@@ -31,6 +31,7 @@ endorsed.classpath=
 excludes=
 file.reference.fontawesomefx-8.9.jar=C:\\Users\\A.L.I.C.E\\Desktop\\fontawesomefx-8.9.jar
 file.reference.fontawesomefx-glyphsbrowser-all-1.0.jar=C:\\Users\\A.L.I.C.E\\Desktop\\fontawesomefx-glyphsbrowser-all-1.0.jar
+file.reference.javax.mail.jar=javax.mail.jar
 file.reference.mysql-connector-java-5.1.42-bin.jar=C:\\Users\\A.L.I.C.E\\Desktop\\mysql-connector-java-5.1.42-bin.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -41,7 +42,8 @@ javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.fontawesomefx-8.9.jar}:\
     ${file.reference.fontawesomefx-glyphsbrowser-all-1.0.jar}:\
-    ${file.reference.mysql-connector-java-5.1.42-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.42-bin.jar}:\
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
