--- a/PIDev_java/nbproject/project.properties
+++ b/PIDev_java/nbproject/project.properties
@@ -29,9 +29,16 @@ dist.jar=${dist.dir}/PIDev_java.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.controlsfx-8.40.16.jar=C:\\Users\\brahm\\Downloads\\flexganttfx-8.12.0-bin (1)\\ext\\controlsfx-8.40.16.jar
+file.reference.flexganttfx-core-8.12.0.jar=C:\\Users\\brahm\\Downloads\\flexganttfx-8.12.0-bin (1)\\lib\\flexganttfx-core-8.12.0.jar
+file.reference.flexganttfx-extras-8.12.0.jar=C:\\Users\\brahm\\Downloads\\flexganttfx-8.12.0-bin (1)\\lib\\flexganttfx-extras-8.12.0.jar
+file.reference.flexganttfx-model-8.12.0.jar=C:\\Users\\brahm\\Downloads\\flexganttfx-8.12.0-bin (1)\\lib\\flexganttfx-model-8.12.0.jar
+file.reference.flexganttfx-view-8.12.0.jar=C:\\Users\\brahm\\Downloads\\flexganttfx-8.12.0-bin (1)\\lib\\flexganttfx-view-8.12.0.jar
 file.reference.fontawesomefx-8.9.jar=C:\\Users\\brahm\\Desktop\\3A27\\fontawesomefx-8.9.jar
 file.reference.fontawesomefx-glyphsbrowser-all-1.0.jar=C:\\Users\\brahm\\Desktop\\3A27\\fontawesomefx-glyphsbrowser-all-1.0.jar
 file.reference.itextpdf-5.4.2.jar=C:\\Users\\brahm\\Desktop\\3A27\\itextpdf-5.4.2.jar
+file.reference.jfoenix-8.0.10.jar=C:\\Users\\brahm\\Downloads\\jfoenix-8.0.10.jar
+file.reference.license4j-1.4.0.jar=C:\\Users\\brahm\\Downloads\\flexganttfx-8.12.0-bin (1)\\ext\\license4j-1.4.0.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -41,7 +48,14 @@ javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.fontawesomefx-8.9.jar}:\
     ${file.reference.fontawesomefx-glyphsbrowser-all-1.0.jar}:\
-    ${file.reference.itextpdf-5.4.2.jar}
+    ${file.reference.itextpdf-5.4.2.jar}:\
+    ${file.reference.jfoenix-8.0.10.jar}:\
+    ${file.reference.flexganttfx-view-8.12.0.jar}:\
+    ${file.reference.flexganttfx-core-8.12.0.jar}:\
+    ${file.reference.flexganttfx-extras-8.12.0.jar}:\
+    ${file.reference.flexganttfx-model-8.12.0.jar}:\
+    ${file.reference.controlsfx-8.40.16.jar}:\
+    ${file.reference.license4j-1.4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
