--- a/PIDev_java/nbproject/project.properties
+++ b/PIDev_java/nbproject/project.properties
@@ -30,10 +30,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.activation.jar=C:\\Users\\USER\\Downloads\\activation.jar
+file.reference.activation.jar-1=C:\\Users\\Bou3dila\\Downloads\\jar\\jar\\activation.jar
 file.reference.java-json-schema.jar=C:\\Users\\USER\\Downloads\\java-json-schema.jar
+file.reference.java-json-schema.jar-1=C:\\Users\\Bou3dila\\Downloads\\jar\\jar\\java-json-schema.jar
 file.reference.javax.mail.jar=C:\\wamp64\\www\\RUNTIME-TERROR-master\\Desktop\\javax.mail.jar
 file.reference.mail.jar=C:\\Users\\USER\\Downloads\\mail.jar
+file.reference.mail.jar-1=C:\\Users\\Bou3dila\\Downloads\\jar\\jar\\mail.jar
 file.reference.spring-security-crypto-4.1.0.RELEASE.jar=C:\\Users\\USER\\Downloads\\spring-security-crypto-4.1.0.RELEASE.jar
+file.reference.spring-security-crypto-4.1.0.RELEASE.jar-1=C:\\Users\\Bou3dila\\Downloads\\jar\\jar\\spring-security-crypto-4.1.0.RELEASE.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -45,7 +49,11 @@ javac.classpath=\
     ${file.reference.mail.jar}:\
     ${file.reference.activation.jar}:\
     ${file.reference.javax.mail.jar}:\
-    ${file.reference.spring-security-crypto-4.1.0.RELEASE.jar}
+    ${file.reference.spring-security-crypto-4.1.0.RELEASE.jar}:\
+    ${file.reference.activation.jar-1}:\
+    ${file.reference.java-json-schema.jar-1}:\
+    ${file.reference.mail.jar-1}:\
+    ${file.reference.spring-security-crypto-4.1.0.RELEASE.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -76,11 +84,16 @@ javafx.classpath.extension=\
     ${java.home}/lib/javaws.jar:\
     ${java.home}/lib/deploy.jar:\
     ${java.home}/lib/plugin.jar
+javafx.deploy.adddesktopshortcut=false
+javafx.deploy.addstartmenushortcut=false
 javafx.deploy.allowoffline=true
 # If true, application update mode is set to 'background', if false, update mode is set to 'eager'
 javafx.deploy.backgroundupdate=false
+javafx.deploy.disable.proxy=false
 javafx.deploy.embedJNLP=true
 javafx.deploy.includeDT=true
+javafx.deploy.installpermanently=false
+javafx.deploy.permissionselevated=false
 # Set true to prevent creation of temporary copy of deployment artifacts before each run (disables concurrent runs)
 javafx.disable.concurrent.runs=false
 # Set true to enable multiple concurrent runs of the same WebStart or Run-in-Browser project
@@ -101,6 +114,9 @@ javafx.preloader.type=none
 javafx.rebase.libs=false
 javafx.run.height=600
 javafx.run.width=800
+javafx.signing.blob=false
+javafx.signing.enabled=false
+javafx.signing.type=notsigned
 # Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0+ projects
 jnlp.enabled=false
 # Main class for Java launcher
@@ -112,6 +128,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
+native.bundling.enabled=false
 platform.active=default_platform
 run.classpath=\
     ${dist.jar}:\
