--- a/PIDev_java/nbproject/project.properties
+++ b/PIDev_java/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.activation.jar=C:\\Users\\USER\\Downloads\\activation.jar
+file.reference.controlsfx-8.40.11.jar=C:\\Users\\USER\\Downloads\\controlsfx-8.40.11.jar
 file.reference.java-json-schema.jar=C:\\Users\\USER\\Downloads\\java-json-schema.jar
 file.reference.mail.jar=C:\\Users\\USER\\Downloads\\mail.jar
 file.reference.spring-security-crypto-4.1.0.RELEASE.jar=C:\\Users\\USER\\Downloads\\spring-security-crypto-4.1.0.RELEASE.jar
@@ -43,7 +44,8 @@ javac.classpath=\
     ${file.reference.java-json-schema.jar}:\
     ${file.reference.mail.jar}:\
     ${file.reference.activation.jar}:\
-    ${file.reference.spring-security-crypto-4.1.0.RELEASE.jar}
+    ${file.reference.spring-security-crypto-4.1.0.RELEASE.jar}:\
+    ${file.reference.controlsfx-8.40.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
