fix design offreDetails

--- a/PIDev_java/nbproject/project.properties
+++ b/PIDev_java/nbproject/project.properties
@@ -132,7 +132,22 @@ javac.classpath=\
     ${file.reference.jfoenix-8.0.10.jar-3}:\
     ${file.reference.license4j-1.4.0.jar-2}:\
     ${file.reference.mail.jar-2}:\
-    ${file.reference.spring-security-crypto-4.1.0.RELEASE.jar-2}
+    ${file.reference.spring-security-crypto-4.1.0.RELEASE.jar-2}:\
+    ${file.reference.activation.jar-1}:\
+    ${file.reference.controlsfx-8.40.11.jar}:\
+    ${file.reference.fontawesomefx-8.9.jar-2}:\
+    ${file.reference.itextpdf-5.4.2__1_.jar}:\
+    ${file.reference.itextpdf-5.4.2.jar-1}:\
+    ${file.reference.java-json-schema.jar-1}:\
+    ${file.reference.jfoenix-8.0.10.jar-2}:\
+    ${file.reference.mail.jar-1}:\
+    ${file.reference.spring-security-crypto-4.1.0.RELEASE.jar-1}:\
+    ${file.reference.calendarfx-recurrence-8.4.1.jar}:\
+    ${file.reference.calendarfx-view-8.4.1.jar}:\
+    ${file.reference.controlsfx-8.40.11.jar-1}:\
+    ${file.reference.fontawesomefx-commons-8.13.jar}:\
+    ${file.reference.fontawesomefx-fontawesome-4.7.0-1.jar}:\
+    ${file.reference.license4j-1.4.0.jar-1}
     ${file.reference.activation.jar}:\
     ${file.reference.spring-security-crypto-4.1.0.RELEASE.jar}:\
     ${file.reference.mail.jar}:\
