--- a/PIDev_java/nbproject/project.properties
+++ b/PIDev_java/nbproject/project.properties
@@ -29,10 +29,12 @@ dist.jar=${dist.dir}/PIDev_java.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-net-3.8.0.jar=commons-net-3.8.0.jar
 file.reference.fontawesomefx-8.9.jar=C:\\Users\\A.L.I.C.E\\Desktop\\fontawesomefx-8.9.jar
 file.reference.fontawesomefx-glyphsbrowser-all-1.0.jar=C:\\Users\\A.L.I.C.E\\Desktop\\fontawesomefx-glyphsbrowser-all-1.0.jar
 file.reference.javax.mail.jar=javax.mail.jar
 file.reference.mysql-connector-java-5.1.42-bin.jar=C:\\Users\\A.L.I.C.E\\Desktop\\mysql-connector-java-5.1.42-bin.jar
+file.reference.TrayNotification.jar=TrayNotification.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -43,7 +45,9 @@ javac.classpath=\
     ${file.reference.fontawesomefx-8.9.jar}:\
     ${file.reference.fontawesomefx-glyphsbrowser-all-1.0.jar}:\
     ${file.reference.mysql-connector-java-5.1.42-bin.jar}:\
-    ${file.reference.javax.mail.jar}
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.TrayNotification.jar}:\
+    ${file.reference.commons-net-3.8.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
